# LinuxCamPAM

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.cache/clangd/index/: auth_engine.cpp.FF9D5B4DC4D6EC1A.idx  auth_engine.hpp.59ACFB194846F2D4.idx  camera.cpp.28876CC988FDA75F.idx  camera.hpp.27940B1C16C74116.idx  check_opencl.cpp.0C650A543175C7BB.idx  constants.hpp.B1DCD61D6BD829EB.idx  json.hpp.A8DE86FD89E6C623.idx  logger.hpp.536D7E29C90C8035.idx  main.cpp.275B3AF5620C1D72.idx  main.cpp.46AC95A6BB078CE7.idx  main.cpp.7B75EA6F27DB89B9.idx  pam_linuxcampam.cpp.F05200C51EF2D0C1.idx  test_config.cpp.E0D6581D32F6F152.idx  test_embeddings.cpp.74E39A8804D14BC3.idx  test_model_version.cpp.03DEF5DB859EC74E.idx  test_security.cpp.BCAAF14D47250A44.idx
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: config.ini  linuxcampam_pam_profile
debian/: changelog  control  postinst  prerm  rules
docker/: Dockerfile.aarch64  Dockerfile.arm64  Dockerfile.i386  Dockerfile.riscv64
docs/: CONFIGURATION.md  DEBUGGING.md  PROJECT_HISTORY.md  SECURITY_ASSESSMENT.md
include/: constants.hpp
scripts/: detect_opencl.sh  download_models.sh  install.sh  install_deps.sh  install_ir_emitter.sh  linuxcampam.service  setup_config.sh
src/cli/: main.cpp
src/pam/: pam_linuxcampam.cpp
src/service/: auth_engine.cpp  auth_engine.hpp  camera.cpp  camera.hpp  logger.hpp  main.cpp
src/tools/: check_opencl.cpp
tests/: test_config.cpp  test_embeddings.cpp  test_model_version.cpp  test_security.cpp
